--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://Zahh-id.github.io/personal",
+  "homepage": "https://zahh.dev",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
